
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-2 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1835] Fix error on Windows platforms when an extension_packages path contains a colon (:)
- Added ORM editing formpanel object for editing v/p editing pairs, used now on modUser remote data form
- Added panel for viewing remote data on a user
- Added 'lexicon' field to modAccessPolicy to enable translations of descriptions of Permissions
- Added extended field to modUserProfile to handle a majority of basic extended user profile storage/retrieval needs
- Added 'lexicon' field to Element properties to enable automatic translating of property descriptions and option names
- Fixed parent/context_key reference issue when creating resource from context tree node
- Tweaks to index.css for default mgr theme to correct styling issues in webkit browsers due to ExtJS upgrade
- Fixed deprecated references to removed images in default mgr template css that was causing 404s
- [#MODX-1911] Allow for drag/drop reorganizing of categories in the Element tree
- [#MODX-1892] Various fixes to TV-Template relationship grids
- [#MODX-1895] Added sanity check for windows systems with file names in file browser
- [#MODX-1908] Corrected logic flaw in modManagerResponse that prevented smarty templatePath from being set for CMPs
- Optimized loading for System Settings grid
- Updated ExtJS to 3.2.1
- Add remote_key and remote_data to modUser
- [#MODX-1898] Fix static calls to modX::fromJSON() and modX::toJSON() instance methods (xPDO updated to revision 421)
- Pushed File tree nodes' context menus to JS layer, added Upload Files button to tree toolbar
- Pushed Element tree nodes' context menus to JS layer, similar to Resource Tree optimizations