@@ -26,22 +26,122 @@ hr {
     border: 0;
     margin: 20px;
 }
-
-#modx-content {
-    width: 99%;
-    padding: .5%;
-}
-#modx-leftbar {
-    width: 300px;
-    margin-right: 10px;
-}
-
 #modx-container {
     height: 100%;
     width: 100%;
     padding: 0;
     z-index: 9993;
 }
+
+
+#modx-content {
+    padding: 0 5px;
+}
+.modx-leftbar {
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    width: auto;
+    float: left;
+    height: 100%;
+    background-color: #5E5E5E;
+    position: relative;
+    overflow: visible;
+    z-index: 0;
+    /* clear: left;*/
+    margin: 4px 10px 4px 4px;
+    padding: 0;
+}
+
+/* leftbar tabs */
+#modx-leftbar-content {
+    float: left;
+    margin: 7px 0 7px 7px;
+}
+.modx-leftbar-panel {
+    margin-top: 7px;
+}
+
+.modx-leftbar ul.x-tab-strip li.x-tab-strip-active {
+    background-color: #EFEFEF;
+    border-color: #EFEFEF;
+}
+
+.modx-leftbar  .x-tab-panel-header-plain .x-tab-strip-spacer, .x-tab-panel-footer-plain .x-tab-strip-spacer{
+    background-color: #EEEEEE;
+    border: 1px solid #EEEEEE;
+}
+
+.modx-leftbar .x-tab-strip-top .x-tab-strip-active .x-tab-right span.x-tab-strip-text{
+    color: #5e5e5e;
+    text-shadow: none;
+}
+
+.modx-leftbar .x-tab-strip-wrap li {
+    color: #f7f7f7;
+}
+.modx-leftbar .x-tool-toggle {
+    width: 24px;
+    height: 24px;
+    float: right;
+    z-index: 5;
+    display: none;
+}
+.modx-tree .x-toolbar {
+    background: #eee;
+    border: 0;
+}
+
+.modx-leftbar .x-panel-body {
+    background: transparent;
+}
+
+.modx-leftbar form.x-panel-body {
+    background-color: #eee !important;
+}
+
+.modx-leftbar .x-tab-panel-body-top {
+    -moz-border-radius-bottomleft: 3px;
+    -moz-border-radius-bottomright: 3px;
+    -webkit-border-bottom-left-radius: 3px;
+    -webkit-border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
+.modx-leftbar .x-tree-root-ct {
+    -moz-border-radius-bottomleft: 3px;
+    -moz-border-radius-bottomright: 3px;
+    -webkit-border-bottom-left-radius: 3px;
+    -webkit-border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    background-color: #eee;
+    padding: 4px;
+}
+.modx-leftbar .x-panel-header-text,
+.modx-leftbar .x-panel-animated .x-panel-header-text {
+    margin-right: -10px !important;
+    background: transparent url(../../images/restyle/i/bg-x-accordion-hd2.png) 100% 0 !important;
+    display: block;
+    line-height: 32px;
+}
+.modx-leftbar .x-panel .x-panel-animated div.x-panel-header {
+    overflow: visible !important;
+}
+#modx-resource-tree-panel .x-accordion-hd {
+    background-position: 0 0;
+}
+#modx-element-tree-panel .x-accordion-hd {
+    background-position: 0 -32px;
+}
+#modx-file-tree-panel .x-accordion-hd {
+    background-position: 0 -64px;
+}
+#modx-static-page-settings .x-accordion-hd {
+    background-position: 0 -96px;
+}
+
 
 .padding {
     padding: 1em;
@@ -483,111 +583,6 @@ table.classy tr.odd td {
 .modx-pb-fullview {
     text-align: center;
 }
-/* leftbar tabs */
-.modx-leftbar {
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-    width: 23%;
-    float: left;
-    height: 100%;
-    background-color: #5E5E5E;
-    position: relative;
-    overflow: visible;
-    z-index: 0;
-    clear: left;
-    margin: 1% 0 1% 1%;
-    padding: 0;
-}
-#modx-leftbar-content {
-    float: left;
-    width: 95%;
-    margin: 7px 0 7px 7px;
-}
-.modx-leftbar-panel {
-    margin-top: 7px;
-}
-
-.modx-leftbar ul.x-tab-strip li.x-tab-strip-active {
-    background-color: #EFEFEF;
-    border-color: #EFEFEF;
-}
-
-.modx-leftbar  .x-tab-panel-header-plain .x-tab-strip-spacer, .x-tab-panel-footer-plain .x-tab-strip-spacer{
-    background-color: #EEEEEE;
-    border: 1px solid #EEEEEE;
-}
-
-.modx-leftbar .x-tab-strip-top .x-tab-strip-active .x-tab-right span.x-tab-strip-text{
-    color: #5e5e5e;
-    text-shadow: none;
-}
-
-.modx-leftbar .x-tab-strip-wrap li {
-    color: #f7f7f7;
-}
-.modx-leftbar .x-tool-toggle {
-    width: 24px;
-    height: 24px;
-    float: right;
-    z-index: 5;
-    display: none;
-}
-.modx-tree .x-toolbar {
-    background: #eee;
-    border: 0;
-}
-
-.modx-leftbar .x-panel-body {
-    background: transparent;
-}
-
-.modx-leftbar form.x-panel-body {
-    background-color: #eee !important;
-}
-
-.modx-leftbar .x-tab-panel-body-top {
-    -moz-border-radius-bottomleft: 3px;
-    -moz-border-radius-bottomright: 3px;
-    -webkit-border-bottom-left-radius: 3px;
-    -webkit-border-bottom-right-radius: 3px;
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
-}
-
-.modx-leftbar .x-tree-root-ct {
-    -moz-border-radius-bottomleft: 3px;
-    -moz-border-radius-bottomright: 3px;
-    -webkit-border-bottom-left-radius: 3px;
-    -webkit-border-bottom-right-radius: 3px;
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
-    background-color: #eee;
-    padding: 4px;
-}
-.modx-leftbar .x-panel-header-text,
-.modx-leftbar .x-panel-animated .x-panel-header-text {
-    margin-right: -10px !important;
-    background: transparent url(../../images/restyle/i/bg-x-accordion-hd2.png) 100% 0 !important;
-    display: block;
-    line-height: 32px;
-}
-.modx-leftbar .x-panel .x-panel-animated div.x-panel-header {
-    overflow: visible !important;
-}
-#modx-resource-tree-panel .x-accordion-hd {
-    background-position: 0 0;
-}
-#modx-element-tree-panel .x-accordion-hd {
-    background-position: 0 -32px;
-}
-#modx-file-tree-panel .x-accordion-hd {
-    background-position: 0 -64px;
-}
-#modx-static-page-settings .x-accordion-hd {
-    background-position: 0 -96px;
-}
-
 /* top navbar */
 #modx-home-icon:hover {
     opacity: 1;
